--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   	<div id="world"/>
 
 <div id="credits">
-  <p>Minik bir CSS-JS oyunu</p>
+  <p>Emirhan Özdemir</p>
 </div>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
