--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
   	<div id="world"/>
 
 <div id="credits">
-  <p>Emirhan Ozdemir</p>
+  <p>emirhan ozdemir</p>
 </div>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/OrbitControls.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/Cat.js'></script>
 
   
-<script  src="js/cat.js"></script>
+
+    <script  src="js/cat.js"></script>
 
 
 
