--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
 
   
 </head>
@@ -18,16 +18,17 @@
   	<div id="world"/>
 
 <div id="credits">
-  <p>Minik bir CSS-JS oyunu</p>
+  <p>EmirhanOzdemir ♥</p>
 </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
+      
+<script src='http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/OrbitControls.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/264161/Cat.js'></script>
 
   
 
-    <script  src="js/index.js"></script>
+    <script  src="cat.js"></script>
 
 
 
