--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <h2>Password Generator</h2>
   <div class="password-output">
     <input type="text" id="password" readonly>
-    <button class="bi copy-btn"></button>
+    <button class="copy-btn"></button>
   </div>
 
   <label for="length-input">
