--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
-<div class="password-generator">
-  <h2>Password Generator</h2>
-  <div class="password-output">
-    <input type="text" id="password" readonly>
-    <button class="copy-btn"></button>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
 
-  <label for="length-input">
-    <span class="length-val-box">12</span>
-    <input type="range" id="length-input" min="4" max="30" value="12">
-  </label>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Password Generator</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&display=swap">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-  <div class="options-wrapper">
-    <p>Advance Options</p>
-    <div class="options">
-      <label><input type="checkbox" id="lowercase" checked>Lowercase (a-z)</label>
-      <label><input type="checkbox" id="uppercase" checked>Uppercase (A-Z)</label>
-      <label><input type="checkbox" id="numbers" checked>Numbers (0-9)</label>
-      <label><input type="checkbox" id="special" checked>Special (@#$%...)</label>
+<body>
+  <div class="password-generator">
+    <h2>Password Generator</h2>
+    <div class="password-output">
+      <input type="text" id="password" readonly>
+      <button class="copy-btn"></button>
     </div>
+    <label for="length-input">
+      <span class="length-val-box">12</span>
+      <input type="range" id="length-input" min="4" max="30" value="12">
+    </label>
+    <div class="options-wrapper">
+      <p>Advance Options</p>
+      <div class="options">
+        <label><input type="checkbox" id="lowercase" checked>Lowercase (a-z)</label>
+        <label><input type="checkbox" id="uppercase" checked>Uppercase (A-Z)</label>
+        <label><input type="checkbox" id="numbers" checked>Numbers (0-9)</label>
+        <label><input type="checkbox" id="special" checked>Special (@#$%...)</label>
+      </div>
+    </div>
+    <button class="generate-btn">Generate Password</button>
   </div>
-  <button class="generate-btn">Generate Password</button>
-</div>
+<script src="updated-password-generator.js"></script>
+</body>
+
+</html>
