--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="password-generator">
-    <h2>Sallabisifre</h2>
+    <h2>Salla bi' şifre</h2>
     <div class="password-output">
       <input type="text" id="password" readonly>
       <button class="copy-btn"></button>
