--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Password Generator</title>
+  <title>Salla1parola</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500&display=swap">
   <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
 
 <body>
   <div class="password-generator">
-    <h2>Salla bi' şifre</h2>
+    <h2>Salla bi' parola</h2>
     <div class="password-output">
       <input type="text" id="password" readonly>
       <button class="copy-btn"></button>
