--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emirhan Özdemir - Siber Güvenlik Uzmanı</title>
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -115,7 +113,6 @@
 </head>
 <body data-theme="dark">
 
-    <!-- Header & Navigation -->
     <header class="fixed top-0 left-0 right-0 z-50 p-6 flex justify-between items-center bg-transparent backdrop-blur-sm shadow-sm transition duration-300 ease-in-out" id="navbar">
         <div class="text-xl font-bold">
             <span class="text-gray-400">&lt;Emirhan Özdemir /&gt;</span>
@@ -131,13 +128,11 @@
                 <i class="fa-solid fa-sun"></i>
             </button>
         </nav>
-        <!-- Mobil Menü Butonu -->
         <button id="mobile-menu-button" class="md:hidden text-gray-400">
             <i class="fa-solid fa-bars text-2xl"></i>
         </button>
     </header>
     
-    <!-- Mobil Menü -->
     <div id="mobile-menu" class="hidden fixed top-0 left-0 right-0 z-40 p-6 bg-gray-900 shadow-lg transition duration-300 ease-in-out md:hidden">
         <nav class="flex flex-col space-y-4 items-end">
             <a href="#about" class="nav-link text-gray-400 hover:text-blue-500">Hakkında</a>
@@ -149,10 +144,8 @@
         </nav>
     </div>
 
-    <!-- Ana İçerik -->
     <main class="container mx-auto p-6 md:p-12">
 
-        <!-- Ana Sayfa/Hero Bölümü -->
         <section id="home" class="min-h-screen flex flex-col items-center justify-center text-center">
             <h1 class="text-4xl md:text-5xl lg:text-7xl font-bold mb-4 animate-fade-in animate-delay-100">
                 Merhaba, benim adım
@@ -161,16 +154,15 @@
             </h1>
             <p class="text-lg md:text-xl text-gray-400 mb-8">Siber Güvenlik Uzmanı</p>
             <div class="flex space-x-4">
-                <a href="#" class="bg-blue-500 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-600 transition duration-300 shadow-md">
+                <a href="#contact" class="bg-blue-500 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-600 transition duration-300 shadow-md">
                     <i class="fa-solid fa-envelope mr-2"></i> İletişime Geç
                 </a>
-                <a href="#" class="border border-blue-500 text-blue-500 font-bold py-3 px-6 rounded-lg hover:bg-blue-500 hover:text-white transition duration-300 shadow-md">
+                <a href="https://www.linkedin.com/in/emirhan%C3%B6zdemir/" target="_blank" class="border border-blue-500 text-blue-500 font-bold py-3 px-6 rounded-lg hover:bg-blue-500 hover:text-white transition duration-300 shadow-md">
                     <i class="fa-brands fa-linkedin mr-2"></i> LinkedIn
                 </a>
             </div>
         </section>
 
-        <!-- Hakkında Bölümü -->
         <section id="about" class="min-h-screen flex flex-col justify-center p-8 border-b-2 border-gray-700">
             <h2 class="section-title"><span>01.</span> Hakkında</h2>
             <div class="flex flex-col lg:flex-row items-center lg:space-x-12 mt-8">
@@ -188,17 +180,14 @@
                     </div>
                 </div>
                 <div class="lg:w-1/3 mt-8 lg:mt-0 flex justify-center">
-                    <!-- Hakkında bölümü için görsel yer tutucusu -->
                     <img class="rounded-lg shadow-lg" src="https://placehold.co/400x300/1a202c/e2e8f0?text=Emirhan+Ozdemir" alt="Emirhan Özdemir">
                 </div>
             </div>
         </section>
 
-        <!-- Beceriler Bölümü -->
         <section id="skills" class="min-h-screen flex flex-col justify-center p-8 border-b-2 border-gray-700">
             <h2 class="section-title"><span>02.</span> Beceriler</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-                <!-- Programlama Becerileri -->
                 <div class="card p-6 rounded-lg shadow-lg">
                     <div class="flex items-center mb-4">
                         <i class="fa-solid fa-code text-3xl text-blue-500 mr-4"></i>
@@ -234,7 +223,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- Web Teknolojileri Becerileri -->
                 <div class="card p-6 rounded-lg shadow-lg">
                     <div class="flex items-center mb-4">
                         <i class="fa-solid fa-laptop-code text-3xl text-blue-500 mr-4"></i>
@@ -270,7 +258,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- Diğer Beceriler -->
                 <div class="card p-6 rounded-lg shadow-lg">
                     <div class="flex items-center mb-4">
                         <i class="fa-solid fa-list-check text-3xl text-blue-500 mr-4"></i>
@@ -298,11 +285,9 @@
             </div>
         </section>
         
-        <!-- Deneyim Bölümü -->
         <section id="experience" class="min-h-screen flex flex-col justify-center p-8 border-b-2 border-gray-700">
             <h2 class="section-title"><span>03.</span> Deneyim</h2>
             <div class="space-y-8 mt-8">
-                <!-- Deneyim 1 -->
                 <div class="card p-6 rounded-lg shadow-lg flex flex-col md:flex-row justify-between">
                     <div>
                         <h3 class="text-xl font-bold">Yazılım Mühendisi</h3>
@@ -315,7 +300,6 @@
                         <p class="text-gray-500">Ocak 2023 - Haziran 2023</p>
                     </div>
                 </div>
-                <!-- Deneyim 2 -->
                 <div class="card p-6 rounded-lg shadow-lg flex flex-col md:flex-row justify-between">
                     <div>
                         <h3 class="text-xl font-bold">Junior Web Geliştirici</h3>
@@ -331,11 +315,9 @@
             </div>
         </section>
 
-        <!-- Eğitim Bölümü -->
         <section id="education" class="min-h-screen flex flex-col justify-center p-8 border-b-2 border-gray-700">
             <h2 class="section-title"><span>04.</span> Eğitim</h2>
             <div class="space-y-8 mt-8">
-                <!-- Eğitim 1 -->
                 <div class="card p-6 rounded-lg shadow-lg flex flex-col md:flex-row justify-between">
                     <div>
                         <h3 class="text-xl font-bold">Yazılım Mühendisliği</h3>
@@ -348,7 +330,6 @@
                         <p class="text-gray-500">Eylül 2021 - Günümüz</p>
                     </div>
                 </div>
-                <!-- Eğitim 2 -->
                 <div class="card p-6 rounded-lg shadow-lg flex flex-col md:flex-row justify-between">
                     <div>
                         <h3 class="text-xl font-bold">Lise Eğitimi</h3>
@@ -364,11 +345,9 @@
             </div>
         </section>
 
-        <!-- İletişim Bölümü -->
         <section id="contact" class="min-h-screen flex flex-col justify-center p-8">
             <h2 class="section-title"><span>05.</span> İletişim</h2>
             <div class="flex flex-col lg:flex-row gap-12 mt-8">
-                <!-- İletişim Bilgileri -->
                 <div class="lg:w-1/2">
                     <h3 class="text-3xl font-bold mb-4">Bana Ulaşın</h3>
                     <p class="text-lg text-gray-400 mb-8">
@@ -389,13 +368,14 @@
                         </div>
                         <div class="flex items-center">
                             <i class="fa-brands fa-linkedin text-xl text-blue-500 mr-4"></i>
-                            <span>linkedin.com/in/emirhan-ozdemir</span>
+                            <a href="https://www.linkedin.com/in/emirhan%C3%B6zdemir/" target="_blank" class="hover:text-blue-500 transition duration-300">
+                                https://www.linkedin.com/in/emirhan%C3%B6zdemir/
+                            </a>
                         </div>
                     </div>
                 </div>
-                <!-- İletişim Formu -->
                 <div class="lg:w-1/2">
-                    <form id="contact-form" class="space-y-6">
+                    <form id="contact-form" action="mailto:emrhnozdmr02@gmail.com" enctype="text/plain" method="post" class="space-y-6">
                         <div>
                             <label for="name" class="block text-sm font-medium text-gray-400 mb-2">Adınız</label>
                             <input type="text" id="name" name="name" class="input-field w-full px-4 py-2 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition duration-200" placeholder="Adınız" required>
@@ -428,7 +408,6 @@
 
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-800 text-gray-400 text-center p-6 mt-12">
         <div class="container mx-auto">
             <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
@@ -436,7 +415,7 @@
                     <span class="text-gray-400">&lt;Emirhan Özdemir /&gt;</span>
                 </div>
                 <div class="flex space-x-4">
-                    <a href="#" class="text-gray-400 hover:text-blue-500"><i class="fa-brands fa-linkedin-in text-xl"></i></a>
+                    <a href="https://www.linkedin.com/in/emirhan%C3%B6zdemir/" target="_blank" class="text-gray-400 hover:text-blue-500"><i class="fa-brands fa-linkedin-in text-xl"></i></a>
                     <a href="#" class="text-gray-400 hover:text-blue-500"><i class="fa-brands fa-github text-xl"></i></a>
                     <a href="#" class="text-gray-400 hover:text-blue-500"><i class="fa-solid fa-envelope text-xl"></i></a>
                     <a href="#" class="text-gray-400 hover:text-blue-500"><i class="fa-solid fa-phone text-xl"></i></a>
