--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                     <div class="space-y-4 text-gray-400">
                         <div class="flex items-center">
                             <i class="fa-solid fa-envelope text-xl text-blue-500 mr-4"></i>
-                            <span>emirhan.ozdemir@email.com</span>
+                            <span>emrhnozdmr02@gmail.com</span>
                         </div>
                         <div class="flex items-center">
                             <i class="fa-solid fa-phone text-xl text-blue-500 mr-4"></i>
@@ -554,4 +554,5 @@
     </script>
 </body>
 </html>
+
 
